# dashboard-py

./: Main.py  README.md  pyproject.toml
pages/: 1_Code.py  2_Write.py  3_Read.py  4_Watch.py  5_Finance.py  6_Resume.py
